<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/layout"
    tools:context=".presentation.PagePayment">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="500dp"
        android:layout_height="100dp"
...
                android:layout_margin="15dp"
                android:fontFamily="casual"
                android:text="@string/nameOfCardHolderHeaderString"
                android:textColor="@color/walmarketYellow"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/nameofCardHolder"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/nameofCardHolder" />

            <EditText
                android:id="@+id/nameofCardHolder"
                android:layout_width="wrap_content"
...
                android:layout_margin="15dp"
                android:fontFamily="casual"
                android:text="@string/creditCardNumHeaderString"
                android:textColor="@color/walmarketYellow"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/creditCardNum"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/creditCardNum" />

            <EditText
                android:id="@+id/creditCardNum"
                android:layout_width="wrap_content"
...
                android:layout_margin="15dp"
                android:fontFamily="casual"
                android:text="@string/creditCardTypeHeaderString"
                android:textColor="@color/walmarketYellow"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/cvv"
                app:layout_constraintStart_toStartOf="parent"
                />

            <RadioGroup
                android:id="@+id/creditCardType"
                android:layout_width="wrap_content"
...

                <RadioButton
                    android:id="@+id/visa"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="casual"
                    android:text="@string/visaString"
                    android:textAlignment="center"
                    android:textColor="@color/walmarketYellow"
                    android:textSize="30sp"
                    android:textStyle="bold" />

            </RadioGroup>
...
                android:layout_margin="15dp"
                android:fontFamily="casual"
                android:text="@string/expiryDateHeaderString"
                android:textColor="@color/walmarketYellow"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/expiryDate"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/expiryDate" />

            <EditText
                android:id="@+id/expiryDate"
                android:layout_width="wrap_content"
...

            <ImageView
                android:layout_width="400dp"
                android:layout_height="400dp"
                android:src="@drawable/walmarket_image"
                app:layout_constraintTop_toBottomOf="@id/divider"
                app:layout_constraintBottom_toTopOf="@id/paymentButton"
                app:layout_constraintStart_toEndOf="@id/creditCardNum"
                app:layout_constraintEnd_toEndOf="parent"/>

            <Button
                android:id="@+id/goBackButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/paymentButton"
                android:layout_margin="15dp"
                android:backgroundTint="@color/walmarketYellow"
...
                android:onClick="onProcessPayment"
                android:textStyle="bold"
                android:textSize="30sp"
                android:text="@string/paymentButtonString"/>

            <CheckBox
                android:id="@+id/savePaymentCheckbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:fontFamily="casual"
                android:text="@string/savePaymentCheckboxString"
                android:textAlignment="center"
...
