<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/itemBrowserView"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.PageBrowser">

...
        app:layout_constraintBottom_toBottomOf="@id/searchBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/clearSearchButton"
        app:layout_constraintTop_toTopOf="@id/searchBar" />

    <Button
        android:id="@+id/signInOrCreateAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:backgroundTint="@color/walmarketYellow"
        android:fontFamily="casual"
        android:text="@string/signInButtonString"
...
        android:textSize="25sp"
        android:textStyle="bold"
        android:singleLine="true"
        android:paddingEnd="20dp"
        android:paddingStart="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@id/signOutButton"
        />

    <Button
        android:id="@+id/signOutButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...
        android:textSize="25sp"
        android:textStyle="bold"
        android:singleLine="true"
        android:paddingEnd="20dp"
        android:paddingStart="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@id/myCartPageButton"
        />

    <Button
        android:id="@+id/myCartPageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...
