<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/signInPopup"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="15dp"
    android:paddingEnd="15dp"
    android:layout_gravity="center"
    android:background="@drawable/dark_transparent_background"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="20dp"
        android:backgroundTint="@color/walmarketYellow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/optionHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:fontFamily="casual"
                android:textStyle="bold"
                android:textColor="@color/walmarketBlue"
                android:textSize="40sp"
                android:text="@string/optionHeaderString"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:background="@color/walmarketBlue"
                android:layout_margin="15dp"
                app:layout_constraintTop_toBottomOf="@id/optionHeader"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />

            <Button
                android:id="@+id/enterButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:backgroundTint="@color/walmarketBlue"
                android:fontFamily="casual"
                android:textColor="@color/walmarketYellow"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textSize="30sp"
                android:text="@string/signInButtonString"
                app:layout_constraintTop_toBottomOf="@id/divider"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/or"/>

            <TextView
                android:id="@+id/or"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:fontFamily="casual"
                android:textStyle="bold"
                android:textColor="@color/walmarketBlue"
                android:textSize="30sp"
                android:text="@string/orString"
                app:layout_constraintTop_toBottomOf="@id/divider"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <Button
                android:id="@+id/guestButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:backgroundTint="@color/walmarketBlue"
                android:fontFamily="casual"
                android:textColor="@color/walmarketYellow"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textSize="30sp"
                android:text="@string/guestButtonString"
                app:layout_constraintTop_toTopOf="@id/enterButton"
                app:layout_constraintBottom_toBottomOf="@id/enterButton"
                app:layout_constraintStart_toEndOf="@id/or"
                app:layout_constraintEnd_toEndOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>